client/my-sites/plugins/marketplace/marketplace-domain-upsell/style.scss
.is-section-plugins.has-no-sidebar {
	.layout__content {
		background-color: var( --studio-white );
		height: 100vh;
		@media ( max-width: 782px ) {
			padding: 0;
			background-color: var( --studio-white );
			height: 100vh;
			.layout__primary {
				height: 100vh;
				.marketplace-domain-upsell__root {
					height: calc( 100vh - 50px );
				}
			}
		}
	}
}

.has-no-sidebar .layout__content {
	@media ( max-width: 782px ) {
		padding: 0;
	}
}

.marketplace-domain-upsell__root {
	*,
	*::before,
	*::after {
		box-sizing: border-box;
	}

	display: grid;
	grid-template-rows: 1fr 1fr;
	grid-template-columns: 60% 40%;
	grid-template-areas:
		'domainpicker basket'
		'domainpicker empty';

	@media ( max-width: 782px ) {
		grid-template-rows: 1fr 157px;
		grid-template-columns: 100%;
		grid-template-areas:
			'domainpicker'
			'basket';
		margin: var( --masterbar-height ) 0 0;
		&.expanded-basket-view {
			grid-template-rows: 1fr 245px;
		}
	}

	> div {
		padding: 0 20px;
		@media ( max-width: 782px ) {
			padding: 0 20px;
		}
	}

	.marketplace-domain-upsell__header {
		margin: 0 0 20px;
		@media ( min-width: 782px ) {
			margin: 0 0 20px;
		}
		@media ( min-width: 600px ) {
			margin: 0 0 20px;
		}
	}

	.marketplace-domain-upsell__domain-picker-container {
		grid-area: domainpicker;
		display: flex;
		width: 100%;
		justify-content: space-around;
		overflow-y: scroll;
		max-height: calc( 100vh - 95px );

		.domain-picker {
			max-width: 611px;
			width: 611px;
			padding: 0 20px;
		}

		@media ( max-width: 782px ) {
			padding: 30px 0 0;
			overflow: scroll;
			-ms-overflow-style: none;
			scrollbar-width: none;

			&::-webkit-scrollbar {
				display: none;
			}
		}
	}

	.marketplace-domain-upsell__shopping-cart-container {
		grid-area: basket;
		display: flex;
		width: 100%;
		justify-content: space-around;
		height: auto;
		@media ( max-width: 782px ) {
			background-color: var( --studio-gray-0 );
			padding: 0;
			align-items: flex-end;
			height: auto;
		}
	}
}

